[package]
name = "bytefetch"
version = "0.2.0"
edition = "2024"
description = "A Rust library that makes HTTP file downloads easier to implement."
license = "MIT"
repository = "https://github.com/bytefetch-space/bytefetch"
readme = "README.md"
keywords = ["download", "downloader", "http", "tokio"]
categories = ["network-programming", "asynchronous", "concurrency"]

[dependencies]
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls",
] }
regex = "1.11.1"
tokio = { version = "1.45.0", features = ["macros"] }
bytes = "1.10.1"
percent-encoding = "2.3.1"
tokio-util = "0.7.15"
parking_lot = "0.12.4"
